; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/irda/extr_vlsi_ir.c_vlsi_start_hw.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/irda/extr_vlsi_ir.c_vlsi_start_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, %struct.pci_dev* }
%struct.pci_dev = type { i32 }
%struct.net_device = type { i32 }

@VLSI_PCI_IRMISC = common dso_local global i32 0, align 4
@IRMISC_UARTEN = common dso_local global i32 0, align 4
@IRMISC_UARTTST = common dso_local global i32 0, align 4
@VLSI_PCI_MSTRPAGE = common dso_local global i32 0, align 4
@MSTRPAGE_VALUE = common dso_local global i32 0, align 4
@VLSI_PIO_PROMPT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @vlsi_start_hw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlsi_start_hw(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.pci_dev*, align 8
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 2
  %10 = load %struct.pci_dev*, %struct.pci_dev** %9, align 8
  store %struct.pci_dev* %10, %struct.pci_dev** %4, align 8
  %11 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %12 = call %struct.net_device* @pci_get_drvdata(%struct.pci_dev* %11)
  store %struct.net_device* %12, %struct.net_device** %5, align 8
  %13 = load %struct.net_device*, %struct.net_device** %5, align 8
  %14 = getelementptr inbounds %struct.net_device, %struct.net_device* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %6, align 4
  %16 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %17 = load i32, i32* @VLSI_PCI_IRMISC, align 4
  %18 = call i32 @pci_read_config_byte(%struct.pci_dev* %16, i32 %17, i32* %7)
  %19 = load i32, i32* @IRMISC_UARTEN, align 4
  %20 = load i32, i32* @IRMISC_UARTTST, align 4
  %21 = or i32 %19, %20
  %22 = xor i32 %21, -1
  %23 = load i32, i32* %7, align 4
  %24 = and i32 %23, %22
  store i32 %24, i32* %7, align 4
  %25 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %26 = load i32, i32* @VLSI_PCI_IRMISC, align 4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @pci_write_config_byte(%struct.pci_dev* %25, i32 %26, i32 %27)
  %29 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %30 = load i32, i32* @VLSI_PCI_MSTRPAGE, align 4
  %31 = load i32, i32* @MSTRPAGE_VALUE, align 4
  %32 = call i32 @pci_write_config_byte(%struct.pci_dev* %29, i32 %30, i32 %31)
  %33 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %34 = call i32 @pci_set_master(%struct.pci_dev* %33)
  %35 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %36 = call i64 @vlsi_init_chip(%struct.pci_dev* %35)
  %37 = icmp slt i64 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %1
  %39 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %40 = call i32 @pci_disable_device(%struct.pci_dev* %39)
  store i32 -1, i32* %2, align 4
  br label %54

41:                                               ; preds = %1
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @vlsi_fill_rx(i32 %44)
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 0
  %48 = call i32 @do_gettimeofday(i32* %47)
  %49 = load i32, i32* %6, align 4
  %50 = zext i32 %49 to i64
  %51 = load i64, i64* @VLSI_PIO_PROMPT, align 8
  %52 = add nsw i64 %50, %51
  %53 = call i32 @outw(i32 0, i64 %52)
  store i32 0, i32* %2, align 4
  br label %54

54:                                               ; preds = %41, %38
  %55 = load i32, i32* %2, align 4
  ret i32 %55
}

declare dso_local %struct.net_device* @pci_get_drvdata(%struct.pci_dev*) #1

declare dso_local i32 @pci_read_config_byte(%struct.pci_dev*, i32, i32*) #1

declare dso_local i32 @pci_write_config_byte(%struct.pci_dev*, i32, i32) #1

declare dso_local i32 @pci_set_master(%struct.pci_dev*) #1

declare dso_local i64 @vlsi_init_chip(%struct.pci_dev*) #1

declare dso_local i32 @pci_disable_device(%struct.pci_dev*) #1

declare dso_local i32 @vlsi_fill_rx(i32) #1

declare dso_local i32 @do_gettimeofday(i32*) #1

declare dso_local i32 @outw(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
